--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/algorithm": "^0.1.26",
+    "@antv/g6": "^5.0.42",
     "@google/generative-ai": "^0.21.0",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
