--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "d3": "^7.9.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "monaco-editor": "^0.52.2",
     "openai": "^4.77.0",
     "react": "^18.3.1",
